fix chatbot background in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@
     --foreground: #ededed;
     --user-chat-bg: #353535;
     --user-chat-text: #ffffff;
-    --bot-chat-bg: #143152;
+    --bot-chat-bg: #328fe3;
     --bot-chat-text: #ffffff;
 
   }
